2008-10-23  David Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_generator_batlib.ml: in [generate_external_index] added special case for types

	* src/core/toolchain/batteries_help.ml: [auto_register] created

	* src/core/batteries_config.ml*: created

	* src/core/extlib/extPrintf.mli: Fixed documentation typo.

	* config.pre: created

	* Makefile: [BROWSER], [instdoc] added

2008-10-22  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batteries_help.ml: Added directives

	* src/syntax/pa_batteries/pa_batteries.ml: removed [Toolchain.Help]

	* src/core/toolchain/batteries_help.ml*: [help_*] added

	* src/core/toolchain/batteries_help.ml*: [help] added

	* src/core/toolchain/batteries_help.ml: [register] now uses [Scanf.scanf]

	* src/core/toolchain/batteries_help.ml: [help_aux] now uses [find_help]

	* src/core/toolchain/batteries_help.ml: [find_help] created

	* build/odoc_generator_batlib.ml: in [generate_external_index], changed [fprintf] output string

	* src/syntax/pa_batteries/pa_batteries.ml: [Toolchain.Help] added to [implem]

	* Makefile: in [install], removed [*_pack.cmi]
	
	* src/core/toolchain/batteries_help.ml*: created

	* src/core/toolchain.mlpack: [Batteries_help] added

	* src/core/batteries_core.ml: [Toolchain.Help] added

2008-10-21  David Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_generator_batlib.ml: [generate] now calls [generate_external_index]
	
	* build/odoc_generator_batlib.ml: [generate_external_index] added

	* src/core/extlib/innerIO.ml*: [compare_input], [compare_output] created
	
	* src/core/extlib/innerIO.ml: [pipe] now uses [create_out], [create_in]

	* src/core/extlib/innerIO.ml: [input_channel] now uses [create_in]
	
	* src/core/extlib/innerIO.ml: [input_string] now uses [create_in], [Ref.post_incr]

	* src/core/extlib/innerIO.ml: [output_channel] now uses [create_out]
	
	* src/core/extlib/innerIO.ml: [output_buffer] now uses [create_out]
	