@@ -1,0 +1,1 @@
+A syntax extension for auto-opening OCaml Batteries Included.
