@@ -1,1 +1,2 @@
 <pa_batteries.*>:camlp4oof,use_camlp4
+<*>: debug
