@@ -1,1 +1,1 @@
-<pa_where.*>: camlp4orf,use_camlp4,use_camlp4full
+<pa_where.*>: camlp4orf,use_camlp4,use_camlp4full,debug
